esperimentiFSharp/NeuralLanguage/NeuralLanguageParser.fsyacc.output
Output file describing compiled parser placed in C:\Users\Alessandro\Desktop\repo-linguaggi\esperimentiFSharp\NeuralLanguage\NeuralLanguageParser.fs and C:\Users\Alessandro\Desktop\repo-linguaggi\esperimentiFSharp\NeuralLanguage\NeuralLanguageParser.fsi
------------------------
states = 
state 0:
  items:
    _startstart ->  . start

  actions:
    action 'EOF' (noprec):   reduce directives --> 
    action 'PREPROC' (noprec):   reduce directives --> 
    action 'TRAINING' (noprec):   reduce directives --> 
    action 'VALIDATION' (noprec):   reduce directives --> 
    action 'PLOT' (noprec):   reduce directives --> 
    action 'LP' (noprec):   reduce directives --> 
    action 'RP' (noprec):   reduce directives --> 
    action 'LCB' (noprec):   reduce directives --> 
    action 'RCB' (noprec):   reduce directives --> 
    action 'LB' (noprec):   reduce directives --> 
    action 'RB' (noprec):   reduce directives --> 
    action 'COMMA' (noprec):   reduce directives --> 
    action 'NEWLINE' (noprec):   reduce directives --> 
    action 'COLON' (noprec):   reduce directives --> 
    action 'DOTS' (noprec):   reduce directives --> 
    action 'MEAN' (noprec):   reduce directives --> 
    action 'SD' (noprec):   reduce directives --> 
    action 'MIN' (noprec):   reduce directives --> 
    action 'MAX' (noprec):   reduce directives --> 
    action 'SUM' (noprec):   reduce directives --> 
    action 'SUMSQUARED' (noprec):   reduce directives --> 
    action 'SIN' (noprec):   reduce directives --> 
    action 'COS' (noprec):   reduce directives --> 
    action 'TAN' (noprec):   reduce directives --> 
    action 'ATAN' (noprec):   reduce directives --> 
    action 'LOG' (noprec):   reduce directives --> 
    action 'LN' (noprec):   reduce directives --> 
    action 'FLOOR' (noprec):   reduce directives --> 
    action 'CEIL' (noprec):   reduce directives --> 
    action 'SQRT' (noprec):   reduce directives --> 
    action 'LT' (noprec):   reduce directives --> 
    action 'LTE' (noprec):   reduce directives --> 
    action 'GT' (noprec):   reduce directives --> 
    action 'GTE' (noprec):   reduce directives --> 
    action 'EQ' (noprec):   reduce directives --> 
    action 'NOTEQ' (noprec):   reduce directives --> 
    action 'AND' (noprec):   reduce directives --> 
    action 'OR' (noprec):   reduce directives --> 
    action 'NOT' (noprec):   reduce directives --> 
    action 'TRUE' (noprec):   reduce directives --> 
    action 'FALSE' (noprec):   reduce directives --> 
    action 'PLUS' (noprec):   reduce directives --> 
    action 'MINUS' (noprec):   reduce directives --> 
    action 'TIMES' (noprec):   reduce directives --> 
    action 'FRAC' (noprec):   reduce directives --> 
    action 'POW' (noprec):   reduce directives --> 
    action 'NEG' (noprec):   reduce directives --> 
    action 'NUMBER' (noprec):   reduce directives --> 
    action 'PATH' (noprec):   reduce directives --> 
    action 'ATTID' (noprec):   reduce directives --> 
    action 'ID' (noprec):   shift 8
    action 'error' (noprec):   reduce directives --> 
    action '#' (noprec):   reduce directives --> 
    action '$$' (noprec):   reduce directives --> 

  immediate action: <none>
 gotos:
    goto start: 1
    goto parameter: 32
    goto directives: 2

state 1:
  items:
    _startstart -> start . 

  actions:
    action 'EOF' (noprec):   accept
    action 'PREPROC' (noprec):   accept
    action 'TRAINING' (noprec):   accept
    action 'VALIDATION' (noprec):   accept
    action 'PLOT' (noprec):   accept
    action 'LP' (noprec):   accept
    action 'RP' (noprec):   accept
    action 'LCB' (noprec):   accept
    action 'RCB' (noprec):   accept
    action 'LB' (noprec):   accept
    action 'RB' (noprec):   accept
    action 'COMMA' (noprec):   accept
    action 'NEWLINE' (noprec):   accept
    action 'COLON' (noprec):   accept
    action 'DOTS' (noprec):   accept
    action 'MEAN' (noprec):   accept
    action 'SD' (noprec):   accept
    action 'MIN' (noprec):   accept
    action 'MAX' (noprec):   accept
    action 'SUM' (noprec):   accept
    action 'SUMSQUARED' (noprec):   accept
    action 'SIN' (noprec):   accept
    action 'COS' (noprec):   accept
    action 'TAN' (noprec):   accept
    action 'ATAN' (noprec):   accept
    action 'LOG' (noprec):   accept
    action 'LN' (noprec):   accept
    action 'FLOOR' (noprec):   accept
    action 'CEIL' (noprec):   accept
    action 'SQRT' (noprec):   accept
    action 'LT' (noprec):   accept
    action 'LTE' (noprec):   accept
    action 'GT' (noprec):   accept
    action 'GTE' (noprec):   accept
    action 'EQ' (noprec):   accept
    action 'NOTEQ' (noprec):   accept
    action 'AND' (noprec):   accept
    action 'OR' (noprec):   accept
    action 'NOT' (noprec):   accept
    action 'TRUE' (noprec):   accept
    action 'FALSE' (noprec):   accept
    action 'PLUS' (noprec):   accept
    action 'MINUS' (noprec):   accept
    action 'TIMES' (noprec):   accept
    action 'FRAC' (noprec):   accept
    action 'POW' (noprec):   accept
    action 'NEG' (noprec):   accept
    action 'NUMBER' (noprec):   accept
    action 'PATH' (noprec):   accept
    action 'ATTID' (noprec):   accept
    action 'ID' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    start -> directives . preprocessing network training validation 'EOF'

  actions:
    action 'EOF' (noprec):   error
    action 'PREPROC' (noprec):   shift 140
    action 'TRAINING' (noprec):   error
    action 'VALIDATION' (noprec):   error
    action 'PLOT' (noprec):   error
    action 'LP' (noprec):   error
    action 'RP' (noprec):   error
    action 'LCB' (noprec):   error
    action 'RCB' (noprec):   error
    action 'LB' (noprec):   error
    action 'RB' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'NEWLINE' (noprec):   error
    action 'COLON' (noprec):   error
    action 'DOTS' (noprec):   error
    action 'MEAN' (noprec):   error
    action 'SD' (noprec):   error
    action 'MIN' (noprec):   error
    action 'MAX' (noprec):   error
    action 'SUM' (noprec):   error
    action 'SUMSQUARED' (noprec):   error
    action 'SIN' (noprec):   error
    action 'COS' (noprec):   error
    action 'TAN' (noprec):   error
    action 'ATAN' (noprec):   error
    action 'LOG' (noprec):   error
    action 'LN' (noprec):   error
    action 'FLOOR' (noprec):   error
    action 'CEIL' (noprec):   error
    action 'SQRT' (noprec):   error
    action 'LT' (noprec):   error
    action 'LTE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GTE' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NOTEQ' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'NOT' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'FRAC' (noprec):   error
    action 'POW' (noprec):   error
    action 'NEG' (noprec):   error
    action 'NUMBER' (noprec):   error
    action 'PATH' (noprec):   error
    action 'ATTID' (noprec):   error
    action 'ID' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto preprocessing: 3

state 3:
  items:
    start -> directives preprocessing . network training validation 'EOF'

  actions:
    action 'EOF' (noprec):   error
    action 'PREPROC' (noprec):   error
    action 'TRAINING' (noprec):   error
    action 'VALIDATION' (noprec):   error
    action 'PLOT' (noprec):   error
    action 'LP' (noprec):   error
    action 'RP' (noprec):   error
    action 'LCB' (noprec):   error
    action 'RCB' (noprec):   error
    action 'LB' (noprec):   error
    action 'RB' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'NEWLINE' (noprec):   error
    action 'COLON' (noprec):   error
    action 'DOTS' (noprec):   error
    action 'MEAN' (noprec):   error
    action 'SD' (noprec):   error
    action 'MIN' (noprec):   error
    action 'MAX' (noprec):   error
    action 'SUM' (noprec):   error
    action 'SUMSQUARED' (noprec):   error
    action 'SIN' (noprec):   error
    action 'COS' (noprec):   error
    action 'TAN' (noprec):   error
    action 'ATAN' (noprec):   error
    action 'LOG' (noprec):   error
    action 'LN' (noprec):   error
    action 'FLOOR' (noprec):   error
    action 'CEIL' (noprec):   error
    action 'SQRT' (noprec):   error
    action 'LT' (noprec):   error
    action 'LTE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GTE' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NOTEQ' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'NOT' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'FRAC' (noprec):   error
    action 'POW' (noprec):   error
    action 'NEG' (noprec):   error
    action 'NUMBER' (noprec):   error
    action 'PATH' (noprec):   error
    action 'ATTID' (noprec):   error
    action 'ID' (noprec):   shift 141
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto network: 4

state 4:
  items:
    start -> directives preprocessing network . training validation 'EOF'

  actions:
    action 'EOF' (noprec):   error
    action 'PREPROC' (noprec):   error
    action 'TRAINING' (noprec):   shift 142
    action 'VALIDATION' (noprec):   error
    action 'PLOT' (noprec):   error
    action 'LP' (noprec):   error
    action 'RP' (noprec):   error
    action 'LCB' (noprec):   error
    action 'RCB' (noprec):   error
    action 'LB' (noprec):   error
    action 'RB' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'NEWLINE' (noprec):   error
    action 'COLON' (noprec):   error
    action 'DOTS' (noprec):   error
    action 'MEAN' (noprec):   error
    action 'SD' (noprec):   error
    action 'MIN' (noprec):   error
    action 'MAX' (noprec):   error
    action 'SUM' (noprec):   error
    action 'SUMSQUARED' (noprec):   error
    action 'SIN' (noprec):   error
    action 'COS' (noprec):   error
    action 'TAN' (noprec):   error
    action 'ATAN' (noprec):   error
    action 'LOG' (noprec):   error
    action 'LN' (noprec):   error
    action 'FLOOR' (noprec):   error
    action 'CEIL' (noprec):   error
    action 'SQRT' (noprec):   error
    action 'LT' (noprec):   error
    action 'LTE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GTE' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NOTEQ' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'NOT' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'FRAC' (noprec):   error
    action 'POW' (noprec):   error
    action 'NEG' (noprec):   error
    action 'NUMBER' (noprec):   error
    action 'PATH' (noprec):   error
    action 'ATTID' (noprec):   error
    action 'ID' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto training: 5

state 5:
  items:
    start -> directives preprocessing network training . validation 'EOF'

  actions:
    action 'EOF' (noprec):   error
    action 'PREPROC' (noprec):   error
    action 'TRAINING' (noprec):   error
    action 'VALIDATION' (noprec):   shift 144
    action 'PLOT' (noprec):   error
    action 'LP' (noprec):   error
    action 'RP' (noprec):   error
    action 'LCB' (noprec):   error
    action 'RCB' (noprec):   error
    action 'LB' (noprec):   error
    action 'RB' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'NEWLINE' (noprec):   error
    action 'COLON' (noprec):   error
    action 'DOTS' (noprec):   error
    action 'MEAN' (noprec):   error
    action 'SD' (noprec):   error
    action 'MIN' (noprec):   error
    action 'MAX' (noprec):   error
    action 'SUM' (noprec):   error
    action 'SUMSQUARED' (noprec):   error
    action 'SIN' (noprec):   error
    action 'COS' (noprec):   error
    action 'TAN' (noprec):   error
    action 'ATAN' (noprec):   error
    action 'LOG' (noprec):   error
    action 'LN' (noprec):   error
    action 'FLOOR' (noprec):   error
    action 'CEIL' (noprec):   error
    action 'SQRT' (noprec):   error
    action 'LT' (noprec):   error
    action 'LTE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GTE' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NOTEQ' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'NOT' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'FRAC' (noprec):   error
    action 'POW' (noprec):   error
    action 'NEG' (noprec):   error
    action 'NUMBER' (noprec):   error
    action 'PATH' (noprec):   error
    action 'ATTID' (noprec):   error
    action 'ID' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto validation: 6

state 6:
  items:
    start -> directives preprocessing network training validation . 'EOF'

  actions:
    action 'EOF' (noprec):   shift 7
    action 'PREPROC' (noprec):   error
    action 'TRAINING' (noprec):   error
    action 'VALIDATION' (noprec):   error
    action 'PLOT' (noprec):   error
    action 'LP' (noprec):   error
    action 'RP' (noprec):   error
    action 'LCB' (noprec):   error
    action 'RCB' (noprec):   error
    action 'LB' (noprec):   error
    action 'RB' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'NEWLINE' (noprec):   error
    action 'COLON' (noprec):   error
    action 'DOTS' (noprec):   error
    action 'MEAN' (noprec):   error
    action 'SD' (noprec):   error
    action 'MIN' (noprec):   error
    action 'MAX' (noprec):   error
    action 'SUM' (noprec):   error
    action 'SUMSQUARED' (noprec):   error
    action 'SIN' (noprec):   error
    action 'COS' (noprec):   error
    action 'TAN' (noprec):   error
    action 'ATAN' (noprec):   error
    action 'LOG' (noprec):   error
    action 'LN' (noprec):   error
    action 'FLOOR' (noprec):   error
    action 'CEIL' (noprec):   error
    action 'SQRT' (noprec):   error
    action 'LT' (noprec):   error
    action 'LTE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GTE' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NOTEQ' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'NOT' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'FRAC' (noprec):   error
    action 'POW' (noprec):   error
    action 'NEG' (noprec):   error
    action 'NUMBER' (noprec):   error
    action 'PATH' (noprec):   error
    action 'ATTID' (noprec):   error
    action 'ID' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 7:
  items:
    start -> directives preprocessing network training validation 'EOF' . 

  actions:
    action 'EOF' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'PREPROC' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'TRAINING' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'VALIDATION' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'PLOT' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'LP' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'RP' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'LCB' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'RCB' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'LB' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'RB' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'COMMA' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'NEWLINE' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'COLON' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'DOTS' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'MEAN' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'SD' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'MIN' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'MAX' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'SUM' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'SUMSQUARED' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'SIN' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'COS' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'TAN' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'ATAN' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'LOG' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'LN' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'FLOOR' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'CEIL' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'SQRT' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'LT' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'LTE' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'GT' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'GTE' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'EQ' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'NOTEQ' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'AND' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'OR' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'NOT' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'TRUE' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'FALSE' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'PLUS' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'MINUS' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'TIMES' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'FRAC' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'POW' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'NEG' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'NUMBER' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'PATH' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'ATTID' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'ID' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action 'error' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action '#' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'
    action '$$' (noprec):   reduce start --> directives preprocessing network training validation 'EOF'

  immediate action:   reduce start --> directives preprocessing network training validation 'EOF'
 gotos:

state 8:
  items:
    parameter -> 'ID' . 'COLON' parameterValue

  actions:
    action 'EOF' (noprec):   error
    action 'PREPROC' (noprec):   error
    action 'TRAINING' (noprec):   error
    action 'VALIDATION' (noprec):   error
    action 'PLOT' (noprec):   error
    action 'LP' (noprec):   error
    action 'RP' (noprec):   error
    action 'LCB' (noprec):   error
    action 'RCB' (noprec):   error
    action 'LB' (noprec):   error
    action 'RB' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'NEWLINE' (noprec):   error
    action 'COLON' (noprec):   shift 9
    action 'DOTS' (noprec):   error
    action 'MEAN' (noprec):   error
    action 'SD' (noprec):   error
    action 'MIN' (noprec):   error
    action 'MAX' (noprec):   error
    action 'SUM' (noprec):   error
    action 'SUMSQUARED' (noprec):   error
    action 'SIN' (noprec):   error
    action 'COS' (noprec):   error
    action 'TAN' (noprec):   error
    action 'ATAN' (noprec):   error
    action 'LOG' (noprec):   error
    action 'LN' (noprec):   error
    action 'FLOOR' (noprec):   error
    action 'CEIL' (noprec):   error
    action 'SQRT' (noprec):   error
    action 'LT' (noprec):   error
    action 'LTE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GTE' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NOTEQ' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'NOT' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'FRAC' (noprec):   error
    action 'POW' (noprec):   error
    action 'NEG' (noprec):   error
    action 'NUMBER' (noprec):   error
    action 'PATH' (noprec):   error
    action 'ATTID' (noprec):   error
    action 'ID' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 9:
  items:
    parameter -> 'ID' 'COLON' . parameterValue

  actions:
    action 'EOF' (noprec):   error
    action 'PREPROC' (noprec):   error
    action 'TRAINING' (noprec):   error
    action 'VALIDATION' (noprec):   error
    action 'PLOT' (noprec):   error
    action 'LP' (noprec):   shift 104
    action 'RP' (noprec):   error
    action 'LCB' (noprec):   error
    action 'RCB' (noprec):   error
    action 'LB' (noprec):   shift 14
    action 'RB' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'NEWLINE' (noprec):   error
    action 'COLON' (noprec):   error
    action 'DOTS' (noprec):   error
    action 'MEAN' (noprec):   shift 106
    action 'SD' (noprec):   shift 110
    action 'MIN' (noprec):   shift 114
    action 'MAX' (noprec):   shift 118
    action 'SUM' (noprec):   shift 122
    action 'SUMSQUARED' (noprec):   shift 126
    action 'SIN' (noprec):   shift 77
    action 'COS' (noprec):   shift 80
    action 'TAN' (noprec):   shift 83
    action 'ATAN' (noprec):   shift 86
    action 'LOG' (noprec):   shift 89
    action 'LN' (noprec):   shift 92
    action 'FLOOR' (noprec):   shift 95
    action 'CEIL' (noprec):   shift 98
    action 'SQRT' (noprec):   shift 101
    action 'LT' (noprec):   error
    action 'LTE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GTE' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NOTEQ' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'NOT' (explicit nonassoc 10000):   shift 73
    action 'TRUE' (noprec):   shift 132
    action 'FALSE' (noprec):   shift 133
    action 'PLUS' (noprec):   error
    action 'MINUS' (explicit left 9996):   shift 74
    action 'TIMES' (noprec):   error
    action 'FRAC' (noprec):   error
    action 'POW' (noprec):   error
    action 'NEG' (noprec):   error
    action 'NUMBER' (noprec):   shift 135
    action 'PATH' (noprec):   error
    action 'ATTID' (noprec):   shift 131
    action 'ID' (noprec):   shift 130
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto parameterValue: 10
    goto attributeList: 11
    goto numberList: 12
    goto expression: 13
    goto number: 134

state 10:
  items:
    parameter -> 'ID' 'COLON' parameterValue . 

  actions:
    action 'EOF' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'PREPROC' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'TRAINING' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'VALIDATION' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'PLOT' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'LP' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'RP' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'LCB' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'RCB' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'LB' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'RB' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'COMMA' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'NEWLINE' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'COLON' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'DOTS' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'MEAN' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'SD' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'MIN' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'MAX' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'SUM' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'SUMSQUARED' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'SIN' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'COS' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'TAN' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'ATAN' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'LOG' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'LN' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'FLOOR' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'CEIL' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'SQRT' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'LT' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'LTE' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'GT' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'GTE' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'EQ' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'NOTEQ' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'AND' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'OR' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'NOT' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'TRUE' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'FALSE' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'PLUS' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'MINUS' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'TIMES' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'FRAC' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'POW' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'NEG' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'NUMBER' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'PATH' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'ATTID' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'ID' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action 'error' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action '#' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue
    action '$$' (noprec):   reduce parameter --> 'ID' 'COLON' parameterValue

  immediate action:   reduce parameter --> 'ID' 'COLON' parameterValue
 gotos:

state 11:
  items:
    parameterValue -> attributeList . 
